fixed title selector on mobile

--- a/css/app.scss
+++ b/css/app.scss
@@ -91,7 +91,6 @@ body {
   @media (hover: none) {
     display: none;
   }
-  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
