--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,6 @@ body {
   }
 }
 .hero_selector {
-  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
